--- a/Smart-MOM-Code/Backend/package.json
+++ b/Smart-MOM-Code/Backend/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "smart-mom",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Smart-MOM Backend Services",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
+    "bcrypt-nodejs": "0.0.3",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "express-sessions": "^1.0.6",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "kafka": "^0.2.3",
-    "kafka-node": "^5.0.0",
+    "jwt-simple": "^0.5.6",
+    "kafka-node": "^4.1.3",
     "mongoose": "^5.7.5",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.2",
+    "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.1"
   }
 }
