--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "smart-mom",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
-    "react": "^16.5.0",
-    "react-cookie": "^3.0.4",
-    "react-cookies": "^0.1.0",
-    "react-dom": "^16.5.0",
+    "@types/jquery": "^3.3.31",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^16.9.0",
+    "react-draggable": "^4.1.0",
+    "react-edit-inline": "^1.0.8",
     "react-redux": "^7.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.2",
     "redux": "^4.0.4",
-    "redux-devtools": "^3.5.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
