--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -40,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-country-region-selector": "^1.4.5",
+    "react-countup": "^4.2.3",
+    "scss": "^0.2.4"
   }
 }
