--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@types/jquery": "^3.3.31",
-    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
@@ -14,6 +13,7 @@
     "react-dom": "^16.9.0",
     "react-draggable": "^4.1.0",
     "react-edit-inline": "^1.0.8",
+    "react-jvectormap": "0.0.15",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "react-country-region-selector": "^1.4.5",
     "react-countup": "^4.2.3",
     "scss": "^0.2.4"
