--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -6,6 +6,7 @@
     "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
