--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-speech-recognition": "^2.0.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.0",
+    "react-audio-analyser": "^0.2.6",
     "react-country-region-selector": "^1.4.5",
     "react-countup": "^4.2.3",
     "scss": "^0.2.4"
