--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -15,10 +15,12 @@
     "react-draggable": "^4.1.0",
     "react-edit-inline": "^1.0.8",
     "react-jvectormap": "0.0.15",
+    "react-notification-alert": "0.0.12",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "react-speech-recognition": "^2.0.4",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
