--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-button-loader": "^2.0.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-draggable": "^4.1.0",
