--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
-    "react": "^16.9.0",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-button-loader": "^2.0.0",
     "react-cookies": "^0.1.1",
