--- a/Smart-MOM-Code/Frontend/package.json
+++ b/Smart-MOM-Code/Frontend/package.json
@@ -6,6 +6,7 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.5.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
@@ -16,6 +17,7 @@
     "react-dom": "^16.9.0",
     "react-draggable": "^4.1.0",
     "react-edit-inline": "^1.0.8",
+    "react-firebaseui": "^4.0.0",
     "react-jvectormap": "0.0.15",
     "react-notification-alert": "0.0.12",
     "react-redux": "^7.1.1",
