--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
-flask
-spacy
-deepcorrect
-deepsegment
-summarizer
-urllib
-bson
-textblob
+deepcorrect==1.0.5
+deepsegment==2.3.0
+Flask==1.1.1
+nltk==3.4.5
+numpy==1.17.2
+pandas==0.23.4
+Pillow==5.4.1
+pylint==2.4.3
+pymongo==3.9.0
+python-dateutil==2.7.4
+python-slugify==3.0.4
+python-utils==2.3.0
+regex==2019.11.1
+requests==2.22.0
+spacy==2.1.8
+SpeechRecognition==3.8.1
+summarizer==0.0.7
 tensorflow==1.14.0
+text-unidecode==1.3
+textblob==0.15.3
+tqdm==4.36.0
+txt2txt==1.0.9
+urllib3==1.23
+virtualenv==16.4.3
+keras==2.2.5
+dnspython
